# handmade-http-server

./: CMakeLists.txt  README.md
include/: unp.h
src/: server.c  unp.c
src/view/: index.html
